--- a/manifest.json
+++ b/manifest.json
@@ -9,40 +9,40 @@
   "description": "taxido app",
   "icons": [
     {
-      "src": "../../assets/images/logo/favicon.png",
+      "src": "./assets/images/logo/favicon.png",
       "sizes": "40x40",
       "type": "image/png"
     },
     {
-      "src": "../../assets/images/logo/user/48.png",
+      "src": "./assets/images/logo/user/48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "../../assets/images/logo/user/72.png",
+      "src": "./assets/images/logo/user/72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "../../assets/images/logo/user/96.png",
+      "src": "./assets/images/logo/user/96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "../../assets/images/logo/user/144.png",
+      "src": "./assets/images/logo/user/144.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "../../assets/images/logo/user/168.png",
+      "src": "./assets/images/logo/user/168.png",
       "sizes": "168x168",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "../../assets/images/logo/user/512.png",
+      "src": "./assets/images/logo/user/512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
