--- a/manifest.json
+++ b/manifest.json
@@ -1,51 +1,24 @@
 {
-  "name": "taxido app",
-  "short_name": "taxido app",
-  "lang": "en-US",
-  "start_url": ".",
+  "name": "FS CRM",
+  "short_name": "FS CRM",
+  "description": "Aplikasi manajemen relasi pelanggan untuk bisnis.",
+  "lang": "id-ID",
+  "start_url": "/login.html",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "white",
+  "orientation": "portrait",
+  "background_color": "#ffffff",
   "theme_color": "#c53f3f",
-  "description": "taxido app",
   "icons": [
     {
-      "src": "./assets/images/logo/favicon.png",
-      "sizes": "40x40",
+      "src": "./images/logopk.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./assets/images/logo/user/48.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "./assets/images/logo/user/72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    },
-    {
-      "src": "./assets/images/logo/user/96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./assets/images/logo/user/144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./assets/images/logo/user/168.png",
-      "sizes": "168x168",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./assets/images/logo/user/512.png",
+      "src": "./images/logopk.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
