--- a/manifest.json
+++ b/manifest.json
@@ -3,20 +3,20 @@
   "short_name": "FS CRM",
   "description": "Aplikasi manajemen relasi pelanggan untuk bisnis.",
   "lang": "id-ID",
-  "start_url": "./fs/",
-  "scope": "./",
+  "start_url": "./login.html",
+  "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
   "icons": [
     {
-      "src": "./assets/images/pandurasa_kharisma_pt.png",
+      "src": "./assets/images/logopk.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./assets/images/pandurasa_kharisma_pt.png",
+      "src": "./assets/images/logopk.png",
       "sizes": "512x512",
       "type": "image/png"
     }
