--- a/manifest.json
+++ b/manifest.json
@@ -3,21 +3,21 @@
   "short_name": "FS CRM",
   "description": "Aplikasi manajemen relasi pelanggan untuk bisnis.",
   "lang": "id-ID",
-  "start_url": "/login.html",
+  "start_url": "/",
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "theme_color": "#c53f3f",
   "icons": [
     {
-      "src": "/assets/images/logopk.png",
+      "src": "./assets/images/logopk.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/images/logopk.png",
+      "src": "./assets/images/logopk.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
