--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "FS CRM",
   "description": "Aplikasi manajemen relasi pelanggan untuk bisnis.",
   "lang": "id-ID",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "/fs/login.html",
+  "scope": "/fs/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#ffffff",
